# Aero_Control_RL

./: .gitattributes  .gitignore  1_px4_single_vehicle_copy.py  HOW_TO_RUN.txt  run_isaac_cyclone.sh  start_isaac_with_ros2.sh
RL_with_cpp/: CMakeLists.txt  COMPLETE.txt  DIRECTORY_STRUCTURE.txt  DOCUMENTATION_INDEX.md  GETTING_STARTED.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  RL_STARTING_POSITION_CHECK.md  STABLE_EPISODES.md  best_value.pt  build.sh  fastdds_profile.xml  install_and_setup.sh  package.xml  run_training.sh  run_training_fastdds_workaround.sh  setup.sh  setup_env.sh  verify_installation.sh
RL_with_cpp/config/: README.txt
RL_with_cpp/include/: policy_network.hpp  px4_accel_env.hpp  px4_node.hpp
RL_with_cpp/launch/: train_rl.launch.py
RL_with_cpp/src/: policy_network.cpp  px4_accel_env.cpp  px4_node.cpp  train_rl.cpp
RL_with_python/: auto_offboard_arm.py  frames_px4_isaac.py  px4_accel_env.py  train_rl.py
